app/assets/stylesheets/users.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.cursor-pointer{
  cursor: pointer;
}

.mt-1{
  margin-top: 10px;
}

.form-control.form-field-has-error{
  border-color: #a94442;
}

.spinner{
  position: fixed;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  top: 0;
  opacity: .5;
  z-index: 999999;
  background: #e8e8e8;
}

.block-center{
  margin: 0 auto;
}

.img-circle {
  border-radius: 50%;
}

@media (max-width: 992px){
  .img-circle {
    height: 160px;
    width: 160px;
  }
}

@media (max-width: 768px){
  .img-circle {
    height: 200px;
    width: 200px;
  }
}

@media (min-width: 992px){
  .img-circle {
    height: 200px;
    width: 200px;
  }
}

